--- a/faling.html
+++ b/faling.html
@@ -3,6 +3,7 @@
 </head>
 <body>
 <canvas id="man" width="360" height="640"></canvas>
+<canvas></canvas>
 <script src="js/jquery-2.0.3.js"></script>
 <script type="text/javascript" src="js/item.js"></script>
 <script type="text/javascript" src="js/barrier.js"></script>
