--- a/faling.html
+++ b/faling.html
@@ -1,13 +1,53 @@
 ﻿<html>
 <head>
-</head>
-<body>
-<canvas id="man" width="360" height="640"></canvas>
+<link href="css/jquery.mobile-1.3.2.css" rel="stylesheet" type="text/css" />
+<link href="css/game.css" rel="stylesheet" type="text/css" />
 <script src="js/jquery-2.0.3.js"></script>
 <script type="text/javascript" src="js/item.js"></script>
 <script type="text/javascript" src="js/barrier.js"></script>
 <script type="text/javascript" src="js/role.js"></script>
 <script type="text/javascript" src="js/init.js"></script>
+<script src="js/jquery.mobile-1.3.2.js"></script>
 
+</head>
+
+<body>
+
+<div data-role="page" id="welcome">
+    <div data-role="header">
+        <h1>welcome</h1>
+    </div>
+    <div data-role="content">
+        <a class="start" href="#game" data-role="button" data-theme="b">Start</a>
+        <a class="option" href="#option" data-role="button" data-theme="b">Option</a>
+    </div>
+</div>
+
+<div data-role="page" id="game">
+    <div data-role="content">
+        <canvas id="bg" width="360" height="640"></canvas>
+        <canvas id="man" width="360" height="640"></canvas>
+    </div>
+</div>
+
+<div data-role="page" id="gameover">
+    <div data-role="header">
+        <h1>Gameover</h1>
+    </div>
+    <div data-role="content">
+    	<div id="point">
+
+    	</div>	
+    </div>
+</div>
+
+<div data-role="page" id="option">
+    <div data-role="header">
+        <h1>Option</h1>
+    </div>
+    <div data-role="content">
+    	<a href="#welcome" data-role="button" data-theme="b">back</a>
+    </div>
+</div>
 </body>
 </html>
