--- a/faling.html
+++ b/faling.html
@@ -17,7 +17,7 @@
 <audio id="audio" src=""></audio>
 
 
-<div data-role="page" id="welcome">
+<div data-role="page" id="welcome" style=position:absolute width=document.body.clientWidth height=document.body.clientHeight>
     <div data-role="header">
         <h1>welcome</h1>
     </div>
@@ -46,7 +46,7 @@
     </div>
 </div>
 
-<div data-role="page" id="option">
+<div data-role="page" id="option" style=position:absolute width=document.body.clientWidth height=document.body.clientHeight>
     <div data-role="header">
         <h1>Option</h1>
     </div>
