--- a/faling.html
+++ b/faling.html
@@ -6,6 +6,7 @@
 <script type="text/javascript" src="js/item.js"></script>
 <script type="text/javascript" src="js/barrier.js"></script>
 <script type="text/javascript" src="js/role.js"></script>
+<script type="text/javascript" src="js/background.js"></script>
 <script type="text/javascript" src="js/init.js"></script>
 <script src="js/jquery.mobile-1.3.2.js"></script>
 
