--- a/faling.html
+++ b/faling.html
@@ -7,6 +7,7 @@
 <script type="text/javascript" src="js/barrier.js"></script>
 <script type="text/javascript" src="js/role.js"></script>
 <script type="text/javascript" src="js/background.js"></script>
+<script type="text/javascript" src="js/hit.js"></script>
 <script type="text/javascript" src="js/init.js"></script>
 <script src="js/jquery.mobile-1.3.2.js"></script>
 
@@ -31,8 +32,21 @@
 
 <div data-role="page" id="game">
     <div data-role="content">
-        <canvas id="bg" width="360" height="640"></canvas>
-        <canvas id="man" width="360" height="640"></canvas>
+        <canvas id="bg" width="360" height="640"  style="z-index:0;position:absolute;top:50px;left:0px;"></canvas>
+        <canvas id="man" width="360" height="640"  style="z-index:0;position:absolute;top:50px;left:0px;"></canvas>
+
+        <div id="hit" style="width:200px;height:150px;
+                        background-color:#FFFFCC;
+                        border:1px solid;
+                        display:none;
+                        border-radius:10px; 
+                        position: absolute;
+                        left: 75px;
+                        top: 250px;
+                        opacity: 0.7;
+                        z-index:1;">
+                        You Failed!
+        </div>
     </div>
 </div>
 
