--- a/faling.html
+++ b/faling.html
@@ -55,6 +55,9 @@
         <h1>GameOver</h1>
     </div>
     <div data-role="content">
+        <div id="overMsg">
+            你的分数是：<span id="finalPoint"></span>
+        </div>  
         <a href="#welcome" data-role="button" data-theme="b">MENU</a>
         <a class="start" href="#game" data-role="button" data-theme="b">retart</a>
     	<div id="point">
