--- a/faling.html
+++ b/faling.html
@@ -45,7 +45,13 @@
                         top: 250px;
                         opacity: 0.7;
                         z-index:1;">
-                        You Failed!
+            <p style="font-size:20px;text-align:center;font-family:cursive;">You Failed!</p>
+            <div style="font-size:20px;font-family:serif;">
+                <input type="button" value="复活" onclick="">
+            </div>
+            <div style="font-size:20px;font-family:serif;">
+                <input type="button" value="失败" onclick="gameOver();">
+            </div>
         </div>
     </div>
 </div>
