--- a/faling.html
+++ b/faling.html
@@ -11,12 +11,15 @@
 <script type="text/javascript" src="js/init.js"></script>
 <script src="js/jquery.mobile-1.3.2.js"></script>
 
+<meta name="viewport" content="width=device-width,height=device-height,initial-scale=1,user-scalable=no"
+
 </head>
 
 <body>
 	
 
-<audio id="audio" src=""></audio>
+<audio id="audio" src="music/background.mp3"  autoplay loop> 
+</audio>
 
 
 <div data-role="page" id="welcome" style=position:absolute width=document.body.clientWidth height=document.body.clientHeight>
