加入死后暂停游戏，复活继续游戏，重开等

--- a/faling.html
+++ b/faling.html
@@ -49,7 +49,7 @@
                         z-index:1;">
             <p style="font-size:20px;text-align:center;font-family:cursive;">You Failed!</p>
             <div style="font-size:20px;font-family:serif;">
-                <input type="button" value="复活" onclick="">
+                <input type="button" value="复活" onclick="reLife();">
             </div>
             <div style="font-size:20px;font-family:serif;">
                 <input type="button" value="失败" onclick="gameOver();">
