--- a/faling.html
+++ b/faling.html
@@ -34,9 +34,8 @@
 </div>
 
 <div data-role="page" id="game">
-    <div data-role="content">
-        <canvas id="bg" width="360" height="640"  style="z-index:0;position:absolute;top:50px;left:0px;"></canvas>
-        <canvas id="man" width="360" height="640"  style="z-index:0;position:absolute;top:50px;left:0px;"></canvas>
+        <canvas id="bg" width=document.body.clientWidth height=document.body.clientHeight  style="z-index:0;position:absolute;top:0px;left:0px;"></canvas>
+        <canvas id="man" width="360" height="640"  style="z-index:0;position:absolute;top:0px;left:0px;"></canvas>
 
         <div id="hit" style="width:200px;height:150px;
                         background-color:#FFFFCC;
@@ -56,7 +55,6 @@
                 <input type="button" value="失败" onclick="gameOver();">
             </div>
         </div>
-    </div>
 </div>
 
 <div data-role="page" id="gameover">
@@ -75,7 +73,7 @@
     </div>
 </div>
 
-<div data-role="page" id="option" style=position:absolute width=document.body.clientWidth height=document.body.clientHeight>
+<div data-role="page" id="option" >
     <div data-role="header">
         <h1>Option</h1>
     </div>
