--- a/faling.html
+++ b/faling.html
@@ -3,7 +3,8 @@
 
 <link href="css/jquery.mobile-1.3.2.css" rel="stylesheet" type="text/css" />
 <link href="css/game.css" rel="stylesheet" type="text/css" />
-<script src="js/jquery-2.0.3.js"></script>
+<script src="js/jquery-2.0.3.min.js"></script>
+<script src="js/quo.js"></script>
 <script type="text/javascript" src="js/item.js"></script>
 <script type="text/javascript" src="js/barrier.js"></script>
 <script type="text/javascript" src="js/role.js"></script>
@@ -44,12 +45,12 @@
 </div>
 
 <div id="hit" >
-            <p style="font-size:20px;text-align:center;font-family:cursive;">You Failed!</p>
+            <p style="font-size:20px;text-align:center;font-family:cursive;">要复活吗？</p>
             <div style="font-size:20px;font-family:serif;">
-                <input type="button" class="input1" value="复活" onclick="reLife();">
+                <input type="button" class="input1" value="YES" onclick="reLife();">
             </div>
             <div style="font-size:20px;font-family:serif;">
-                <input type="button" class="input2" value="失败" onclick="gameOver();">
+                <input type="button" class="input2" value="NO" onclick="gameOver();">
             </div>
 </div>
 
@@ -82,7 +83,7 @@
             你的分数是：<span id="finalPoint"></span>
         </div>  
         <a href="#welcome" data-role="button" data-theme="b">MENU</a>
-        <a class="start" href="#game" data-role="button" data-theme="b">retart</a>
+        <a class="start" href="#game" data-role="button" data-theme="b">restart</a>
     	<div id="point">
 
     	</div>	
