--- a/faling.html
+++ b/faling.html
@@ -23,7 +23,7 @@
 <body>
 	
 
-<audio id="audio" src="music/background.mp"  autoplay loop> 
+<audio id="audio" src="music/background.mp3"  autoplay loop> 
 </audio>
 
 
