money and renrenshare added
就是这样

--- a/faling.html
+++ b/faling.html
@@ -5,6 +5,8 @@
 <link href="css/game.css" rel="stylesheet" type="text/css" />
 <script src="js/jquery-2.0.3.min.js"></script>
 <script src="js/quo.js"></script>
+<script type="text/javascript" src="http://widget.renren.com/js/rrshare.js"></script>
+<script type="text/javascript" src="js/renrenshare.js"></script>
 <script type="text/javascript" src="js/item.js"></script>
 <script type="text/javascript" src="js/barrier.js"></script>
 <script type="text/javascript" src="js/role.js"></script>
@@ -23,7 +25,7 @@
 <body>
 	
 
-<audio id="audio" src="music/background.mp3"   loop> 
+<audio id="audio" src="222music/background.mp3"   loop> 
 </audio>
 
 
@@ -100,6 +102,7 @@
     <div data-role="content">  
         <a class="start" href="#game" data-role="button" data-theme="b">restart</a>
         <a href="#welcome" data-role="button" data-theme="b">MENU</a>
+        <a name="xn_share" onclick="shareClick()" type="button_large" href="javascript:;"></a>
     	<div id="point">
 
     	</div>	
