--- a/faling.html
+++ b/faling.html
@@ -14,6 +14,7 @@
 <script type="text/javascript" src="js/hit.js"></script>
 <script type="text/javascript" src="js/init.js"></script>
 <script type="text/javascript" src="js/innergame.js"></script>
+<script type="text/javascript" src="js/shop.js"></script>
 <script src="js/jquery.mobile-1.3.2.js"></script>
 
 <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1,user-scalable=no"/>
@@ -66,6 +67,7 @@ div.ui-slider-switch {
     <div data-role="content">
         <a class="start" href="#game" data-transition="flip" data-role="button" data-theme="b">Start</a>
         <a class="option" href="#option" data-transition="slide" data-role="button" data-theme="b">Option</a>
+        <a class="shop" href="#shop" data-transition="slide" data-role="button" data-theme="b">shop</a>
     </div>
 
 </div>
@@ -79,6 +81,9 @@ div.ui-slider-switch {
 
 <div id="hit" >
             <p style="font-size:20px;text-align:center;font-family:cursive;">要复活吗？</p>
+            <p style="font-size:20px;text-align:center;font-family:cursive;">
+                钻石剩余：<span id="diamond"></span>
+            </p>
             <div style="font-size:20px;font-family:serif;">
                 <input id="button1"  type="button" class="input1" value="YES" onmousedown="reLife1()">
             </div>
@@ -190,6 +195,21 @@ div.ui-slider-switch {
 		}
 	</script>
 
+<div data-role="page" id="shop">
+    <div data-role="header"><h1>商城<h1></div>
+    <div><p>金币：<span id="money"></span></p></div>
+    <a id="shield" data-role="button" data-theme="c">shield</a>
+    <a id="harmless" data-role="button" data-theme="c">harmless</a>
+    <a href="#welcome" data-transition="slide" data-role="button" data-theme="b">MENU</a>
+</div>
+
+<div id="shopInfo" data-role="dialog" >
+    <div data-role="header" data-theme="d"><h3>消息</h3></div>
+    <div data-role="content">
+        <h5><span id="s_info"></span></h5>
+        <a href="#shop">确定</a>
+    </div>
+</div>
 
 </body>
 </html>
