修改了商店的外观

--- a/faling.html
+++ b/faling.html
@@ -204,9 +204,12 @@ div.ui-slider-switch {
     <div><p>金币：<span id="money"></span></p>
         <p><span id="s_info"></span></p>
     </div>
-    <canvas id = "shieldBar" height="20" width="360"></canvas>
+    <div id="shieldicon">
+        <canvas id = "shieldBar" height="53" width="300"></canvas></div>
     <a id="shield" data-role="button" data-theme="c">升级盾时间(￥1000)</a>
-    <canvas id = "harmlessBar" height="20" width="360"></canvas>
+    <div id="harmlessicon">
+        <canvas id = "harmlessBar" height="53" width="300"></canvas>
+    </div>
     <a id="harmless" data-role="button" data-theme="c">升级无敌时间（￥1000）</a>
     <a href="#welcome" data-transition="slide" data-role="button" data-theme="b">返回主界面</a>
 </div>
