--- a/faling.html
+++ b/faling.html
@@ -59,9 +59,9 @@ div.ui-slider-switch {
 -->
 
 
-<div data-role="page" id="welcome" style="position:absolute width=document.body.clientWidth height=document.body.clientHeight" >
+<div data-role="page" id="welcome" >
     <div data-role="content">
-    <div id="startImg">
+    <div id="startImg" >
         <div class="start" id="startMan"></div>
         <div class="option" id="optionImg"></div>
         <div class="shop" id="shopImg"></div>
@@ -75,9 +75,9 @@ div.ui-slider-switch {
 
 </div>
 
-<div data-role="page" id="game" style="position:absolute width=document.body.clientWidth height=document.body.clientHeight">
-        <canvas class="playing" id="bg" width=document.body.clientWidth height=document.body.clientHeight  style="z-index:0;position:absolute;top:0px;left:0px;"></canvas>
-         <canvas class="playing" id="man" width="360" height="600"  style="z-index:0;position:absolute;top:0px;left:0px;"></canvas>
+<div data-role="page" id="game" >
+        <canvas class="playing" id="bg" width="360" height="617" style="z-index:0;position:absolute;top:0px;left:0px;"></canvas>
+         <canvas class="playing" id="man" width="360" height="617"  style="z-index:0;position:absolute;top:0px;left:0px;"></canvas>
          <canvas class="playing" id="innergame" width="360" height="600"  style="z-index:0;position:absolute;top:0px;left:0px;"></canvas>
         
 </div>
@@ -132,7 +132,7 @@ div.ui-slider-switch {
 </script>
 
 
-<div data-role="page" id="gameover" style="position:absolute width=document.body.clientWidth height=document.body.clientHeight">
+<div data-role="page" id="gameover" >
     <div id="score" >
     	<br>   
     	<h3 style="color:#8B4513;font-weight:900;">你的分数:<span id="finalPoint"></span></h3>   	    	     	
