统一标题外观

--- a/faling.html
+++ b/faling.html
@@ -155,7 +155,7 @@ div.ui-slider-switch {
 </div>
 
 <div data-role="page" id="option" >
-    <div data-role="header">
+    <div data-role="header" data-theme="b">
         <h1>设置</h1>
     </div>
     <div data-role="content">   
@@ -197,8 +197,8 @@ div.ui-slider-switch {
 		}
 	</script>
 
-<div data-role="page" id="shop" data-theme="b">
-    <div data-role="header"><h4>商城</h4></div>
+<div data-role="page" id="shop" >
+    <div data-role="header" data-theme="b"><h4>商城</h4></div>
     <div><p>金币：<span id="money"></span></p>
         <p><span id="s_info"></span></p>
     </div>
