--- a/faling.html
+++ b/faling.html
@@ -1,7 +1,7 @@
 ﻿<html>
 <head>
 
-<link href="css/jquery.mobile-1.3.2.css" rel="stylesheet" type="text/css" />
+<link href="css/jquery.mobile-1.3.2.min.css" rel="stylesheet" type="text/css" />
 <script src="js/jquery-2.0.3.min.js"></script>
 <script src="js/quo.js"></script>
 <script type="text/javascript" src="http://widget.renren.com/js/rrshare.js"></script>
@@ -14,7 +14,7 @@
 <script type="text/javascript" src="js/init.js"></script>
 <script type="text/javascript" src="js/innergame.js"></script>
 <script type="text/javascript" src="js/shop.js"></script>
-<script src="js/jquery.mobile-1.3.2.js"></script>
+<script src="js/jquery.mobile-1.3.2.min.js"></script>
 
 <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1,user-scalable=no"/>
 
