innergame改了一下放在div里

--- a/faling.html
+++ b/faling.html
@@ -78,8 +78,9 @@ div.ui-slider-switch {
 <div data-role="page" id="game" >
         <canvas class="playing" id="bg" width="360" height="617" style="z-index:0;position:absolute;top:0px;left:0px;"></canvas>
          <canvas class="playing" id="man" width="360" height="617"  style="z-index:0;position:absolute;top:0px;left:0px;"></canvas>
+         <div id="innergame_div">
          <canvas class="playing" id="innergame" width="360" height="600"  style="z-index:0;position:absolute;top:0px;left:0px;"></canvas>
-        
+        </div>
 </div>
 
 <div id="wannaout" >
