改名字 能显示清楚了吧

--- a/faling.html
+++ b/faling.html
@@ -97,13 +97,13 @@ div.ui-slider-switch {
 </div>
 
 <div id="pause" >
-            <p style="color:#A0522D;font-size:20px;font-style:oblique;font-weight:900;text-align:center;font-family:cursive;">*^_^*点我干嘛</p>
+            <p style="color:#A0522D;font-size:20px;font-style:oblique;font-weight:900;text-align:center;font-family:cursive;">休息一会~</p>
 
             <div style="font-size:20px;font-family:serif;">
-                <input style="color:#A0522D;font-weight:900;" id="button3"  type="button" class="input1" value="回到游戏" onmousedown="backtogame()">
+                <input style="color:#A0522D;font-weight:900;" id="button3"  type="button" class="input1" value="back" onmousedown="backtogame()">
             </div>
             <div style="font-size:20px;font-family:serif;">
-                <input style="color:#A0522D;font-weight:900;" id="button4" type="button" class="input2" value="我退了你" onmousedown="gameOver2()">
+                <input style="color:#A0522D;font-weight:900;" id="button4" type="button" class="input2" value="quit" onmousedown="gameOver2()">
             </div>
 </div>
 <script>
