--- a/faling.html
+++ b/faling.html
@@ -37,7 +37,7 @@ div.ui-slider-switch {
 <body>
 	
 
-<audio id="audio" src="sound/背景音乐/CarrotFantasy.pc6game.mp3" autoplay  loop> 
+<audio id="audio" src="sound/背景音乐/CarrotFantasy.pc6game.mp3"   loop> 
 </audio>
 
 <!--
